Restored variables before the contrast fixes

--- a/src/less/Variables.less
+++ b/src/less/Variables.less
@@ -40,29 +40,29 @@
 @color-theme-split1:			spin(@color-theme, -158);
 @color-theme-split2:			spin(@color-theme, 158);
 
-@color-text: 					lighten(@color-foreground,16);
+@color-text: 					lighten(@color-foreground,25);
 @color-header-text: 			@color-dark;
 
 @color-text-inverted:			darken(@color-background,5);
 @color-header-text-inverted:	@color-background;
 
-@color-text-credit:				#757575;
+@color-text-credit:				#999999;
 
 /* UI COLOR
 ================================================== */
 @ui-background-color:			darken(@color-background, 5);
 @ui-background-color-darker:	darken(@color-background, 10);
 @marker-color: 					darken(@ui-background-color,5);
-@marker-outline-color: 			darken(@ui-background-color,17);
+@marker-outline-color: 			darken(@ui-background-color,10);
 @marker-selected-text-color: 	@color-background;
-@marker-text-color: 			darken(@marker-color,50);
+@marker-text-color: 			darken(@marker-color,15);
 @marker-dot-color: 				darken(@marker-color, 33);
 @marker-dot-hover-color: 		darken(@marker-dot-color, 33);
 
-@marker-color-menubar-button:	darken(@marker-color,35);
+@marker-color-menubar-button:	darken(@marker-color,15);
 
-@minor-ticks-color:             #78785b;
-@major-ticks-color:				darken(@minor-ticks-color,20);
+@minor-ticks-color:				darken(@ui-background-color,20);
+@major-ticks-color:				darken(@minor-ticks-color,30);
 
 @minor-ticks-line-color: 		@minor-ticks-color;
 @major-ticks-line-color: 		darken(@minor-ticks-line-color,10);
@@ -95,9 +95,9 @@
 @axis-height:					@minor-ticks-font-size + (@major-ticks-font-size*2) + (@tick-padding*2);
 
 // SlideNav
-@opacity-slide-nav-title:		70;
+@opacity-slide-nav-title:		15;
 @opacity-slide-nav-desc:		 0;
-@opacity-slide-nav-desc-hover:  70;
+@opacity-slide-nav-desc-hover:  50;
 
 /* Animation
 ================================================== */
@@ -108,5 +108,5 @@
 /* GFX
 ================================================== */
 .base-sprite() {
-	background-image: url(storymap.png?v1.0);
+    background-image: url(storymap.png?v1.0);
 }
